--- a/aclsum-preprocessing.ipynb
+++ b/aclsum-preprocessing.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# <b>ACLSum Text Summarizer - Data Preprocessing and Vectorizer</b>\n",
+    "GitHub Repository Full Project: https://github.com/StyNW7/NLP-Text-Summarizer\n",
+    "<br>\n",
     "Dataset Source: https://huggingface.co/datasets/sobamchan/aclsum\n",
     "<br>\n",
     "Docs Documentation: https://docs.google.com/document/d/1qSS2kVPMKn032hhjPmrgMquIb6Q827EiowY9y0s_k3I/edit?usp=sharing\n",
