--- a/Final-Project/scripts/preprocess.ipynb
+++ b/Final-Project/scripts/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "952e7ac9",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
     "    os.makedirs(output_path, exist_ok=True)\n",
     "    dataset.save_to_disk(output_path)\n",
     "\n",
-    "    print(f\"✅ Dataset yang telah dibersihkan berhasil disimpan di: {output_path}\")"
+    "    print(f\"Dataset yang telah dibersihkan berhasil disimpan di: {output_path}\")"
    ]
   }
  ],
