--- a/Final-Project/scripts/train.ipynb
+++ b/Final-Project/scripts/train.ipynb
@@ -8,31 +8,60 @@
    "outputs": [],
    "source": [
     "import argparse\n",
-    "from transformers import (AutoTokenizer, AutoModelForSeq2SeqLM,\n",
-    "                          Seq2SeqTrainer, Seq2SeqTrainingArguments,\n",
-    "                          DataCollatorForSeq2Seq)\n",
-    "from datasets import load_dataset, load_from_disk\n",
+    "from transformers import (\n",
+    "    AutoTokenizer, AutoModelForSeq2SeqLM,\n",
+    "    Seq2SeqTrainer, Seq2SeqTrainingArguments,\n",
+    "    DataCollatorForSeq2Seq\n",
+    ")\n",
+    "from datasets import load_from_disk\n",
     "\n",
-    "def tokenize_function(example, tokenizer):\n",
-    "    model_inputs = tokenizer(example[\"document\"], max_length=1024, padding=\"max_length\", truncation=True)\n",
-    "    with tokenizer.as_target_tokenizer():\n",
-    "        labels = tokenizer(example[\"outcome\"], max_length=150, padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "# Get Max Length Input for each model\n",
+    "def get_max_input_length(model_checkpoint):\n",
+    "    if \"pegasus\" in model_checkpoint:\n",
+    "        return 512\n",
+    "    elif \"longformer\" in model_checkpoint:\n",
+    "        return 4096\n",
+    "    else:\n",
+    "        return 1024\n",
+    "\n",
+    "\n",
+    "# Tokenization function with dynamic input length\n",
+    "def tokenize_function(example, tokenizer, max_input_length=1024):\n",
+    "    model_inputs = tokenizer(\n",
+    "        example[\"document\"],\n",
+    "        max_length=max_input_length,\n",
+    "        padding=\"max_length\",\n",
+    "        truncation=True\n",
+    "    )\n",
+    "    \n",
+    "    labels = tokenizer(\n",
+    "        text_target=example[\"outcome\"],\n",
+    "        max_length=150,\n",
+    "        padding=\"max_length\",\n",
+    "        truncation=True\n",
+    "    )\n",
     "    model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
     "    return model_inputs\n",
     "\n",
-    "def main(model_checkpoint):\n",
     "\n",
+    "def main(model_checkpoint):\n",
+    "    print(f\"🔧 Loading model & tokenizer from: {model_checkpoint}\")\n",
     "    model = AutoModelForSeq2SeqLM.from_pretrained(model_checkpoint)\n",
     "    tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)\n",
     "\n",
-    "    # Original Dataset\n",
-    "    # dataset = load_dataset(\"sobamchan/aclsum\")\n",
-    "\n",
-    "    # Preprocess Dataset\n",
+    "    print(\"📂 Loading preprocessed dataset...\")\n",
     "    dataset = load_from_disk(\"../data/cleaned_aclsum\")\n",
-    "    \n",
-    "    tokenized = dataset.map(lambda x: tokenize_function(x, tokenizer), batched=True)\n",
-    "    \n",
+    "\n",
+    "    max_input_length = get_max_input_length(model_checkpoint)\n",
+    "    print(f\"📏 Using max_input_length: {max_input_length}\")\n",
+    "\n",
+    "    print(\"🔠 Tokenizing dataset...\")\n",
+    "    tokenized = dataset.map(\n",
+    "        lambda x: tokenize_function(x, tokenizer, max_input_length=max_input_length),\n",
+    "        batched=True\n",
+    "    )\n",
+    "\n",
     "    training_args = Seq2SeqTrainingArguments(\n",
     "        output_dir=f\"../models/{model_checkpoint.replace('/', '_')}\",\n",
     "        per_device_train_batch_size=4,\n",
@@ -55,9 +84,15 @@
     "        data_collator=DataCollatorForSeq2Seq(tokenizer, model=model)\n",
     "    )\n",
     "\n",
+    "    print(\"🚀 Training started...\")\n",
     "    trainer.train()\n",
+    "\n",
+    "    print(f\"💾 Saving model to: ../models/{model_checkpoint.replace('/', '_')}\")\n",
     "    model.save_pretrained(f\"../models/{model_checkpoint.replace('/', '_')}\")\n",
     "    tokenizer.save_pretrained(f\"../models/{model_checkpoint.replace('/', '_')}\")\n",
+    "\n",
+    "    print(\"✅ Training and saving completed.\")\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    parser = argparse.ArgumentParser()\n",
